# Utility-Tracker

./: README.md  pyproject.toml
utility_tracker/: hooks.py  modules.txt
utility_tracker/utility_tracker/doctype/electricity_management/: electricity_management.js  electricity_management.json  electricity_management.py  test_electricity_management.py
utility_tracker/utility_tracker/doctype/fuel_management/: fuel_management.js  fuel_management.json  fuel_management.py  test_fuel_management.py
utility_tracker/utility_tracker/doctype/master_agreement/: master_agreement.js  master_agreement.json  master_agreement.py  test_master_agreement.py
utility_tracker/utility_tracker/doctype/master_city/: master_city.js  master_city.json  master_city.py  test_master_city.py
utility_tracker/utility_tracker/doctype/master_company_location/: master_company_location.js  master_company_location.json  master_company_location.py  test_master_company_location.py
utility_tracker/utility_tracker/doctype/master_company_name/: master_company_name.js  master_company_name.json  master_company_name.py  test_master_company_name.py
utility_tracker/utility_tracker/doctype/master_country/: master_country.js  master_country.json  master_country.py  test_master_country.py
utility_tracker/utility_tracker/doctype/master_employee_data/: master_employee_data.js  master_employee_data.json  master_employee_data.py  test_master_employee_data.py
utility_tracker/utility_tracker/doctype/master_fuel_type/: master_fuel_type.js  master_fuel_type.json  master_fuel_type.py  test_master_fuel_type.py
(+24 files in other folders)
